* SQLite3Store
  * Basic support for using with ActiveRecord: #initialize _configuration_ can take a _connection_ option, using ActiveRecord::Base.connection.raw_connection
  * If result set is returned as a hash, change back to an array (needed, as rails sets results_as_hash attribute on DB)

=== 0.5.9.1
* Fix minor graph property caching bug relating to manipulation of sequences.

=== 0.5.9
* Update to 2010-10-26 LC version of RDFa Core 1.1
  * Deep processing of XMLLiterals
  * Case sensitive Terms
  * Updated processor graph vocabulary

=== 0.5.8.2
* Don't create unnecessary namespaces when serializing RDF/XML.
* Don't use regexp to substitute base URI in URI serialization.
* Added profile_graph option to RdfaParser#parse. This MUST be a ConjunctiveGraph and will be used to save profiles that are encountered.
  * Fixme, for now, retrieval should include HTTP headers and perform appropriate HTTP cache control and check for potential updates.
* Added ConjunctiveGraph#add_quad. Adds a quad from the intended subject, predicate, object, and context.
    @example
     g = Graph.new
     cg = ConjunctiveGraph.new
     cg.add_quad(BNode.new, URIRef.new("http://xmlns.com/foaf/0.1/knows"), BNode.new, g)
     => results in the triple being added to g

=== 0.5.8
* Remove dependency on whatlanguage.
* Added support for Processor Graphs.
* Change Graph#seq to specifically look for subject type of rdf:Seq, rdf:Bag or rdf:Alt to trigger rdf:_n processing.
* Update RDFa processing to WD-rdfa-core-20100803 semantics
  * Added Processor Graph and required output
  * Reverse order of processing profiles
  * Don't process element if any profile fails
  * XMLLiterals must be explicitly specified as @datatype
  * TERMorCURIEorAbsURI requires an absolute URI, not document relative
  * Move @profile parsing before @vocabulary.
  * Extract a new default vocabulary from @profile.*

=== 0.5.7
* Add back support for RDFa 1.0 as well as RDFa 1.1. Parser checks @version to determine which